src/widgets/widgets/qmdisubwindow.h
@@ -101,6 +101,7 @@ private:
     Q_PRIVATE_SLOT(d_func(), void _q_enterInteractiveMode())
     Q_PRIVATE_SLOT(d_func(), void _q_processFocusChanged(QWidget *, QWidget *))
     friend class QMdiAreaPrivate;
+    friend class QMdiArea;
 #if QT_CONFIG(tabbar)
     friend class QMdiAreaTabBar;
 #endif
